some changes and fixes

--- a/index.html
+++ b/index.html
@@ -208,7 +208,6 @@
         <div class="bg-video">
             <video class="bg-video__content" autoplay="" muted="" loop="">
                 <source src="img/video.mp4" type="video/mp4">
-                <source src="img/video.webm" type="video/webm"> Your browser is not supported!
             </video>
         </div>
         <h2 class="header-secondary section-header">we make people truly happy</h2>
@@ -327,7 +326,7 @@
             </div>
             <div class="popup__right">
                 <a href="#section-tours" class="popup__close">x</a>
-                <h2 class="header-secondary">start booking now</h2>
+                <h2 class="header-secondary popup__header">start booking now</h2>
                 <h3 class="header-tertiary">IMPORTANT – PLEASE READ THESE TERMS BEFORE BOOKING</h3>
                 <hr>
                 <p class="popup__text">All fares and prices quoted are subject to availability. Prices are subject to change until full payment
